TST: ARM: dts: OMAP2+: Add a mailbox test device node
Add a mailbox test device node on all devices newer than OMAP4
(OMAP4, OMAP5, AM33xx, AM43xx and DRA7) for testing with the mailbox
framework. This device node will probe a test driver which allows us
to perform a loopback unit test.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm/boot/dts/am33xx.dtsi
+++ b/arch/arm/boot/dts/am33xx.dtsi
@@ -441,6 +441,12 @@
 			dma-names = "tx", "rx";
 		};
 	};
+
+	mbox_test {
+		compatible = "ti,omap-mbox-test";
+		mboxes = <&mailbox &mbox_loop>;
+		mbox-names = "mbox-loop";
+	};
 };
 
 #include "am33xx-l4.dtsi"
