--- a/arch/arm/boot/dts/omap4.dtsi
+++ b/arch/arm/boot/dts/omap4.dtsi
@@ -438,6 +438,12 @@
 			};
 		};
 	};
+
+	mbox_test {
+		compatible = "ti,omap-mbox-test";
+		mboxes = <&mailbox &mbox_loop>;
+		mbox-names = "mbox-loop";
+	};
 };
 
 #include "omap4-l4.dtsi"
