TST: arm64: dts: ti: k3-am65-main: Add a mailbox loopback device for testing
Add a loopback sub-mailbox device within Mailbox clusters 1 and 2 on the
AM65x SoCs for testing. The loopback device uses the same mailbox fifo
for sending and receiving messages on the MPU itself, facilitating a
unit-test. The last FIFO within the IP is chosen for the loopback to
not conflict with the actual FIFOs at the beginning that will be used
to communicate with the remote processors.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-am65-main.dtsi
+++ b/arch/arm64/boot/dts/ti/k3-am65-main.dtsi
@@ -433,6 +433,11 @@
 				ti,mbox-tx = <1 0 0>;
 				ti,mbox-rx = <0 0 0>;
 			};
+
+			mbox_loop0: mbox-loop0 {
+				ti,mbox-tx = <15 0 0>;
+				ti,mbox-rx = <15 0 0>;
+			};
 		};
 
 		mailbox0_cluster1: mailbox@31f81000 {
@@ -447,6 +452,11 @@
 			mbox_mcu_r5fss0_core1: mbox-mcu-r5fss0-core1 {
 				ti,mbox-tx = <1 0 0>;
 				ti,mbox-rx = <0 0 0>;
+			};
+
+			mbox_loop1: mbox-loop1 {
+				ti,mbox-tx = <15 0 0>;
+				ti,mbox-rx = <15 0 0>;
 			};
 		};
 
