TST: arm64: dts: ti: k3-am654-base-board: Add a mailbox test node
Add a mbox_test node to the AM654 base board which allows the
mailbox to be tested on any of the derivative boards. The node
can be used to test any of the loopback sub-mailbox nodes on each
of the enabled Mailbox Clusters 0 or 1, one at a time.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-am654-base-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-am654-base-board.dts
@@ -58,6 +58,13 @@
 		compatible = "ti,am654-hwspinlock-test";
 		hwlocks = <&hwspinlock 3>, <&hwspinlock 251>;
 	};
+
+	mbox_test {
+		compatible = "ti,omap-mbox-test";
+		mboxes = <&mailbox0_cluster0 &mbox_loop0>,
+			 <&mailbox0_cluster1 &mbox_loop1>;
+		mbox-names = "mbox-loop0", "mbox-loop1";
+	};
 };
 
 &wkup_pmx0 {
