TST: arm64: dts: ti: k3-am654-base-board: Add a hwspinlock test node
Add hwspin_test node to the K3 AM654 base board upon which the
hwspinlock DT client usage can be tested.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-am654-base-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-am654-base-board.dts
@@ -53,6 +53,11 @@
 			gpios = <&wkup_gpio0 27 GPIO_ACTIVE_LOW>;
 		};
 	};
+
+	hwspin_test {
+		compatible = "ti,am654-hwspinlock-test";
+		hwlocks = <&hwspinlock 3>, <&hwspinlock 251>;
+	};
 };
 
 &wkup_pmx0 {
