--- a/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
@@ -12,6 +12,11 @@
 		stdout-path = "serial2:115200n8";
 		bootargs = "console=ttyS2,115200n8 earlycon=ns16550a,mmio32,0x02800000";
 	};
+
+	hwspin_test {
+		compatible = "ti,am654-hwspinlock-test";
+		hwlocks = <&hwspinlock 3>, <&hwspinlock 251>;
+	};
 };
 
 &wkup_uart0 {
