--- a/arch/arm/boot/dts/am33xx-l4.dtsi
+++ b/arch/arm/boot/dts/am33xx-l4.dtsi
@@ -1412,6 +1412,10 @@
 					ti,mbox-tx = <0 0 0>;
 					ti,mbox-rx = <0 0 3>;
 				};
+				mbox_loop: mbox-loop {
+					ti,mbox-tx = <5 0 0>;
+					ti,mbox-rx = <5 0 0>;
+				};
 			};
 		};
 
