TST: arm64: dts: ti: k3-j721e-main: Add mailbox loopback devices for testing
Add some loopback sub-mailbox devices within each of the Mailbox Clusters
0 through 4 on the J721E SoCs for testing. The loopback device uses the
same mailbox fifo for sending and receiving messages on the MPU itself,
facilitating a unit-test. The last FIFO within each cluster is chosen for
the loopback to not conflict with the actual FIFOs at the beginning that
will be used to communicate with the remote processors.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
+++ b/arch/arm64/boot/dts/ti/k3-j721e-main.dtsi
@@ -114,6 +114,11 @@
 				ti,mbox-rx = <2 0 0>;
 				ti,mbox-tx = <3 0 0>;
 			};
+
+			mbox_loop0: mbox-loop0 {
+				ti,mbox-rx = <15 0 0>;
+				ti,mbox-tx = <15 0 0>;
+			};
 		};
 
 		mailbox0_cluster1: mailbox@31f81000 {
@@ -133,6 +138,11 @@
 			mbox_main_r5fss0_core1: mbox-main-r5fss0-core1 {
 				ti,mbox-rx = <2 0 0>;
 				ti,mbox-tx = <3 0 0>;
+			};
+
+			mbox_loop1: mbox-loop1 {
+				ti,mbox-rx = <15 0 0>;
+				ti,mbox-tx = <15 0 0>;
 			};
 		};
 
@@ -154,6 +164,11 @@
 				ti,mbox-rx = <2 0 0>;
 				ti,mbox-tx = <3 0 0>;
 			};
+
+			mbox_loop2: mbox-loop2 {
+				ti,mbox-rx = <15 0 0>;
+				ti,mbox-tx = <15 0 0>;
+			};
 		};
 
 		mailbox0_cluster3: mailbox@31f83000 {
@@ -174,6 +189,11 @@
 				ti,mbox-rx = <2 0 0>;
 				ti,mbox-tx = <3 0 0>;
 			};
+
+			mbox_loop3: mbox-loop3 {
+				ti,mbox-rx = <15 0 0>;
+				ti,mbox-tx = <15 0 0>;
+			};
 		};
 
 		mailbox0_cluster4: mailbox@31f84000 {
@@ -188,6 +208,11 @@
 			mbox_c71_0: mbox-c71-0 {
 				ti,mbox-rx = <0 0 0>;
 				ti,mbox-tx = <1 0 0>;
+			};
+
+			mbox_loop4: mbox-loop4 {
+				ti,mbox-rx = <15 0 0>;
+				ti,mbox-tx = <15 0 0>;
 			};
 		};
 
