--- a/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
@@ -66,6 +66,11 @@
 		ti,mbox-rx = <2 0 0>;
 		ti,mbox-tx = <3 0 0>;
 	};
+
+	mbox_loop0: mbox-loop0 {
+		ti,mbox-rx = <15 0 0>;
+		ti,mbox-tx = <15 0 0>;
+	};
 };
 
 &mailbox0_cluster1 {
@@ -79,6 +84,11 @@
 	mbox_main_r5fss0_core1: mbox-main-r5fss0-core1 {
 		ti,mbox-rx = <2 0 0>;
 		ti,mbox-tx = <3 0 0>;
+	};
+
+	mbox_loop1: mbox-loop1 {
+		ti,mbox-rx = <15 0 0>;
+		ti,mbox-tx = <15 0 0>;
 	};
 };
 
@@ -94,6 +104,11 @@
 		ti,mbox-rx = <2 0 0>;
 		ti,mbox-tx = <3 0 0>;
 	};
+
+	mbox_loop2: mbox-loop2 {
+		ti,mbox-rx = <15 0 0>;
+		ti,mbox-tx = <15 0 0>;
+	};
 };
 
 &mailbox0_cluster3 {
@@ -108,6 +123,11 @@
 		ti,mbox-rx = <2 0 0>;
 		ti,mbox-tx = <3 0 0>;
 	};
+
+	mbox_loop3: mbox-loop3 {
+		ti,mbox-rx = <15 0 0>;
+		ti,mbox-tx = <15 0 0>;
+	};
 };
 
 &mailbox0_cluster4 {
@@ -116,6 +136,11 @@
 	mbox_c71_0: mbox-c71-0 {
 		ti,mbox-rx = <0 0 0>;
 		ti,mbox-tx = <1 0 0>;
+	};
+
+	mbox_loop4: mbox-loop4 {
+		ti,mbox-rx = <15 0 0>;
+		ti,mbox-tx = <15 0 0>;
 	};
 };
 
