TST: arm64: dts: ti: k3-j721e-common-proc-board: Add a mailbox test node
Add mbox_test node to the K3 J721E common processor board upon which the
the mailbox can be tested. The node can be used to test any of the loopback
sub-mailbox nodes on each of the enabled Mailbox Clusters 0 through 4, one
at a time.

Signed-off-by: Suman Anna <s-anna@ti.com>

--- a/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
+++ b/arch/arm64/boot/dts/ti/k3-j721e-common-proc-board.dts
@@ -17,6 +17,17 @@
 		compatible = "ti,am654-hwspinlock-test";
 		hwlocks = <&hwspinlock 3>, <&hwspinlock 251>;
 	};
+
+	mbox_test {
+		compatible = "ti,omap-mbox-test";
+		mboxes = <&mailbox0_cluster0 &mbox_loop0>,
+			 <&mailbox0_cluster1 &mbox_loop1>,
+			 <&mailbox0_cluster2 &mbox_loop2>,
+			 <&mailbox0_cluster3 &mbox_loop3>,
+			 <&mailbox0_cluster4 &mbox_loop4>;
+		mbox-names = "mbox-loop0", "mbox-loop1", "mbox-loop2",
+			     "mbox-loop3", "mbox-loop4";
+	};
 };
 
 &wkup_uart0 {
